# miranda

./: .date  .epoch  .gitignore  .host  .nextxversion  .version  .xversion  CMakeLists.txt  COPYING  Makefile  README  allexterns  big.c  big.h  cmbnms.c  combs.h  data.c  data.h  ex  fdate.c  gencdecs  hostinfo  just.1  just.c  lex.c  lex.h  linkmenudriver  menudriver.c  mira.1  protect  quotehostinfo  reduce.c  revdate  rules.y  sources  steer.c  toks.m  trans.c  types.c  ugroot  (+6 more)
miralib/: COPYING  auxfile  helpfile  menudriver.csh  menudriver.sh  prelude  preludx  stdenv.m
miralib/ex/: README  ack.m  barry.m  box  box.m  divmodtest.m  edigits.m  fib.m  fibs.m  genmat.m  graphics.m  hamming.m  hanoi.m  just.m  kate.lit.m  kate.tex  keith.m  makebug.m  matrix.m  mrev  parafs.m  polish.m  powers.m  primes.m  pyths.m  queens.m  queens1.m  quicksort.m  rational.m  refoliate.m  selflines.m  set.m  stack.m  topsort.m  treesort.m  unify.m
miralib/manual/: .epoch  1  10  100  11  12  14  15  16  17  18  19  2  20  21  22  23  24  25  26  28  29  29.m  3  30  32  33  34  4  5  6  7  8  9  99  contents  howtoprint  permission  printman
miralib/manual/13/: 1  2  3  contents
miralib/manual/27/: 1  2  3  4  5  contents
miralib/manual/31/: 1  2  3  4  5  6  7  8  9  contents
new/: big.c  data.c  lex.c  reduce.c  rules.y  steer.c  trans.c  types.c
